--- a/facets/house-doctor/house-doctor.html
+++ b/facets/house-doctor/house-doctor.html
@@ -1,5 +1,5 @@
 <div class="clerk-facets">
-            <div class="clerk_absolute">
+    <div class="clerk_absolute">
         <div class="clerk_sort_wrapper">
             <select class="clerk_sort_select" onchange="clerkSorting(this.options[ this.selectedIndex ].value, event);">
                 <option value="" disabled selected>Sorter efter:</option>
@@ -97,6 +97,29 @@
             });
             el.textContent = el.textContent.indexOf(toggle_ui_msg["show"]) > -1 ? toggle_ui_msg["hide"] + group_count : toggle_ui_msg["show"] + group_count;
             window.tagged = window.tagged == undefined ? 1 : window.tagged * -1;
+        }
+    }
+
+    // Function to toggle sorting of results based on option in .clerk_sort_select.
+    // The function takes the value of the option and splits it by _.
+    // The value should always be either asc or desc followed by _ and the attribute key.
+    // The only exception to this is the default sorting which is defined as null_null.
+    function clerkSorting(val, event) {
+        or = val.split("_")[0] == "null" ? eval(val.split("_")[0]) : val.split("_")[0];
+        orb = val.split("_")[1] == "null" ? eval(val.split("_")[1]) : val.split("_")[1];
+        param_sort = val;
+        Clerk("content", "[data-target][data-query][data-template][data-clerk-content-id]", "param", {
+            orderby: orb,
+            order: or,
+        });
+    }
+    // Change value in select element to currently active choice, since element rerenders upon initial user input.
+    // Without it will show the first option nominally regardless of the current ordering in effect.
+    if (!param_sort) {
+        var param_sort;
+    } else {
+        if (param_sort.length > 0) {
+            document.querySelector(".clerk_sort_select").value = param_sort;
         }
     }
 </script>
