--- a/recs/standard-skeleton/index.html
+++ b/recs/standard-skeleton/index.html
@@ -2,12 +2,12 @@
     <div data-name="container3" class="clerk-wrapper">
         <div data-group="group1" data-container="true" class="clerk-wrapper-child">
             <div class="clerk-headline-wrapper">
-                <p class="clerk-headline">{{headline}}</p>
+                <h1 class="clerk-headline">{{headline}}</h1>
             </div>
             <div data-name="slider1" class="clerk-slider-wrapper">
                 <div data-group="group1" data-container="true" class="clerk-slider">
                     <!-- Change this to change the currency symbol -->
-                    {% for item in products %} {% assign currency_symbol = " kr" %}
+                    {% for item in products %}
                     <div class="clerk-slider-content">
                         <!-- SLIDER CONTENT GOES IN HERE -->
                     </div>
