Updates to styling and currency symbol

--- a/recs/standard-skeleton/index.html
+++ b/recs/standard-skeleton/index.html
@@ -7,7 +7,7 @@
             <div data-name="slider1" class="clerk-slider-wrapper">
                 <div data-group="group1" data-container="true" class="clerk-slider">
                     <!-- Change this to change the currency symbol -->
-                    {% for item in products %}
+                    {% for item in products %} {% assign currency_symbol = "€" %}
                     <div class="clerk-slider-content">
                         <!-- SLIDER CONTENT GOES IN HERE -->
                     </div>
