--- a/search/livesearch/full-width-grid/index.html
+++ b/search/livesearch/full-width-grid/index.html
@@ -1,4 +1,3 @@
-{% assign currency_symbol = "kr" %}
 <div class="clerk-instant-search">
     <div class="clerk-instant-search-grid">
         {% if (products.length + categories.length + pages.length) == 0 %}
@@ -11,47 +10,41 @@
         {% endif %} {% if products.length > 0 %}
         <div class="clerk-instant-search-col clerk-col-1">
             <div class="clerk-instant-search-products">
-                <div class="clerk-instant-search-title">Produkter</div>
+                <div class="clerk-instant-search-title">Products</div>
                 <div class="clerk-instant-search-product-grid">
-                    {% for product in products %}
+                    {% for product in products %} {% assign currency_symbol = "€" %}
                     <div class="clerk-instant-search-product clerk-instant-search-key-selectable">
                         <!-- PRODUCT INFORMATION -->
                         <a href="{{product.url}}" class="clerk-instant-search-link">
                             <div class="clerk-instant-search-product-image" style="background-image: url('{{ product.image }}');"></div>
                             <div class="clerk-instant-search-product-info">
                                 <div class="clerk-instant-search-product-name">{{ product.name | highlight query }}</div>
-                                {% if product.variant_prices.first < product.variant_prices.last %}
-                                    {% if product.price < product.list_price %}
-                                        <div class="clerk-instant-search-price-wrapper">
-                                            <div class="clerk-instant-search-product-list-price">Fra: {{ product.list_price | money }} {{ currency_symbol }}</div>
-                                            <div class="clerk-instant-search-product-price">Fra: {{ product.price | money }} {{ currency_symbol }}</div>
-                                        </div>
-                                    {% else %}
-                                        <div class="clerk-instant-search-price-wrapper">
-                                            <div class="clerk-instant-search-product-price">Fra: {{ product.price | money }} {{ currency_symbol }}</div>
-                                        </div>
-                                    {% endif %}
+                                {% if product.variant_prices.first < product.variant_prices.last %} {% if product.price < product.list_price %}
+                                <div class="clerk-instant-search-price-wrapper">
+                                    <div class="clerk-instant-search-product-list-price">{{ product.list_price | money }} {{ currency_symbol }}</div>
+                                    <div class="clerk-instant-search-product-price">{{ product.price | money }} {{ currency_symbol }}</div>
+                                </div>
                                 {% else %}
-                                    {% if product.price < product.list_price %}
-                                        <div class="clerk-instant-search-price-wrapper">
-                                            <div class="clerk-instant-search-product-list-price">{{ product.list_price | money }} {{ currency_symbol }}</div>
-                                            <div class="clerk-instant-search-product-price">{{ product.price | money }} {{ currency_symbol }}</div>
-                                        </div>
-                                    {% else %}
-                                        <div class="clerk-instant-search-price-wrapper">
-                                            <div class="clerk-instant-search-product-price">{{ product.price | money }} {{ currency_symbol }}</div>
-                                        </div>
-                                    {% endif %}
-                                {% endif %}
+                                <div class="clerk-instant-search-price-wrapper">
+                                    <div class="clerk-instant-search-product-price">{{ product.price | money }} {{ currency_symbol }}</div>
+                                </div>
+                                {% endif %} {% else %} {% if product.price < product.list_price %}
+                                <div class="clerk-instant-search-price-wrapper">
+                                    <div class="clerk-instant-search-product-list-price">{{ product.list_price | money }} {{ currency_symbol }}</div>
+                                    <div class="clerk-instant-search-product-price">{{ product.price | money }} {{ currency_symbol }}</div>
+                                </div>
+                                {% else %}
+                                <div class="clerk-instant-search-price-wrapper">
+                                    <div class="clerk-instant-search-product-price">{{ product.price | money }} {{ currency_symbol }}</div>
+                                </div>
+                                {% endif %} {% endif %}
                             </div>
                         </a>
                     </div>
                     {% endfor %}
                 </div>
                 {% if hits > products.length %}
-                    <a class="clerk-view-more-results-button" href="/module/clerk/search?search_query={{ query}}">
-                        Se flere resultater
-                    </a>
+                <a class="clerk-instant-search-more-results" href="/module/clerk/search?search_query={{ query}}">See more results</a>
                 {% endif %}
             </div>
         </div>
@@ -60,7 +53,7 @@
             <div class="clerk-instant-search-suggestions">
                 {% if suggestions.length > 0 %}
                 <div class="clerk_instant_search_suggestions_wrap">
-                    <div class="clerk-instant-search-title">Forslag</div>
+                    <div class="clerk-instant-search-title">Suggestions</div>
                     {% for suggestion in suggestions %} {% if suggestion != query %}
                     <div class="clerk-instant-search-category clerk-instant-search-key-selectable">
                         <a class="clerk_instant_search_link" href="/module/clerk/search?search_query={{suggestion}}">{{ suggestion | highlight query }}</a>
@@ -71,7 +64,7 @@
             </div>
             {% if categories.length > 0 %}
             <div class="clerk-instant-search-categories">
-                <div class="clerk-instant-search-title">Kategorier</div>
+                <div class="clerk-instant-search-title">Categories</div>
                 {% for category in categories %}
                 <div class="clerk-instant-search-category clerk-instant-search-key-selectable">
                     <a href="{{category.url}}">{{ category.name | highlight query }}</a>
@@ -80,7 +73,7 @@
             </div>
             {% endif %} {% if pages.length > 0 %}
             <div class="clerk-instant-search-pages">
-                <div class="clerk-instant-search-title">Sider</div>
+                <div class="clerk-instant-search-title">Pages</div>
                 {% for page in pages %}
                 <div class="clerk-instant-search-category clerk-instant-search-key-selectable">
                     <a href="{{ page.url }}">
