Fixed missing end of img src

--- a/search/livesearch/grid/index.html
+++ b/search/livesearch/grid/index.html
@@ -16,7 +16,7 @@
                     <div class="clerk-instant-search-product clerk-instant-search-key-selectable">
                         <!-- PRODUCT INFORMATION -->
                         <a href="{{product.url}}" class="clerk-instant-search-link">
-                            <img class="clerk-instant-search-product-image" src="{{ item.image }} alt="{{ item.name }}"/>
+                            <img class="clerk-instant-search-product-image" src="{{ item.image }}" alt="{{ item.name }}"/> 
                             <div>
                                 <div class="clerk-instant-search-product-brand">{{product.brand}}</div>
                                 <div class="clerk-instant-search-product-name">{{ product.name | highlight query }}</div>
