--- a/search/searchpage/standard/index.html
+++ b/search/searchpage/standard/index.html
@@ -4,7 +4,9 @@
     {% endif %}
     <div class="clerk-grid-wrapper">
         {% for item in products %} {% assign currency_symbol = "€" %}
-        <div class="clerk-content"></div>
+        <div class="clerk-content">
+            <!-- ADD CONTENT HERE -->
+        </div>
         {% endfor %}
     </div>
     {% if count > products.length %}
