--- a/search/livesearch/list/index.html
+++ b/search/livesearch/list/index.html
@@ -8,7 +8,7 @@
                 <div class="clerk-instant-search-product clerk-instant-search-key-selectable">
                     <a href="{{product.url}}" class="clerk-instant-search-link">
                         <div class="clerk-instant-search-product-image" style="background-image: url('{{ product.image }}');"></div>
-                        <div>
+                        <div class="clerk-instant-search-info-wrap">
                             <div class="clerk-instant-search-product-brand">{{product.brand}}</div>
                             <div class="clerk-instant-search-product-name">{{ product.name | highlight query }}</div>
                             {% if product.price < product.list_price %}
