Changed all default for loops to use item. instead of product.

--- a/recs/sidecart/design.html
+++ b/recs/sidecart/design.html
@@ -3,27 +3,27 @@
     <div class="clerk-sidebar-grid">
         <div class="clerk-sidebar-col">
             <div class="clerk-sidebar-products">
-                {% for product in products %}
+                {% for item in products %}
                 <div class="clerk-sidebar-product">
                     <div class="clerk-sidebar-image-wrapper">
-                        <a class="clerk_link" href="{{ product.url }}">
+                        <a class="clerk_link" href="{{ item.url }}">
                             <div class="clerk_image_wrapper">
-                                <img class="clerk_product_image" loading="lazy" src="{{ product.images }}" />
+                                <img class="clerk_product_image" loading="lazy" src="{{ item.images }}" />
                             </div>
                         </a>
                     </div>
                     <div class="clerk-sidebar-info-wrapper">
                         <div class="clerk-sidebar-product-name">
-                            <a href="{{ product.url }}">{{product.name}}</a>
+                            <a href="{{ item.url }}">{{item.name}}</a>
                         </div>
                         <div class="clerk-sidebar-price-wrapper">
-                            {% if product.on_sale == true %}
+                            {% if item.on_sale == true %}
                             <div class="clerk-sidebar-normal-price">
-                                <span class="clerk-price">{{ currency_symbol | replace "." "" }} {{ product.list_price | currency_converter | money 2 "." "." }}</span>
+                                <span class="clerk-price">{{ currency_symbol | replace "." "" }} {{ item.list_price | currency_converter | money 2 "." "." }}</span>
                             </div>
                             {% endif %}
                             <div class="clerk-sidebar-on_sale-price">
-                                <span class="clerk-price">{{ currency_symbol | replace "." "" }} {{ product.price | currency_converter | money 2 "." "." }}</span>
+                                <span class="clerk-price">{{ currency_symbol | replace "." "" }} {{ item.price | currency_converter | money 2 "." "." }}</span>
                             </div>
                         </div>
                     </div>
