Added a check for category to see if there are more than 8 products

--- a/recs/standard-skeleton/index.html
+++ b/recs/standard-skeleton/index.html
@@ -1,3 +1,4 @@
+{% if products.length > 8 %}
 <div class="clerk-wrapper">
     <div class="clerk-headline-wrapper">
         <h1 class="clerk-headline">{{headline}}</h1>
@@ -13,3 +14,4 @@
         </div>
     </div>
 </div>
+{% endif %}
