Forgot to close the script tag

--- a/shopify_multilang/tracking_script.html
+++ b/shopify_multilang/tracking_script.html
@@ -38,5 +38,5 @@
             }
         });
     });
-
-    <!-- End of Clerk.io E-commerce Personalisation tool - www.clerk.io Tax-{{ tax_line.rate_percentage }} -->
+</script>
+<!-- End of Clerk.io E-commerce Personalisation tool - www.clerk.io Tax-{{ tax_line.rate_percentage }} -->
