removing unnecessary html attributes

--- a/search/searchpage/standard/index.html
+++ b/search/searchpage/standard/index.html
@@ -1,6 +1,6 @@
-<div data-name="container1" class="clerk-search-result-wrapper">
+<div class="clerk-search-result-wrapper">
     {% if query.length > 0 %}
-    <h1 id="nj0N4lrx" class="clerk-search-result-title">{{ hits }} results for "{{query}}"</h1>
+    <h1 class="clerk-search-result-title">{{ hits }} results for "{{query}}"</h1>
     {% endif %}
     <div class="clerk-grid-wrapper">
         {% for item in products %} {% assign currency_symbol = "€" %}
@@ -10,7 +10,7 @@
         {% endfor %}
     </div>
     {% if count > products.length %}
-    <div data-group="group1" class="clerk-see-more-button-wrapper" data-container="true">
+    <div class="clerk-see-more-button-wrapper">
         <button class="clerk-see-more-button" onclick="Clerk('content', '#{{ content.id }}', 'more', 20);">See more results</button>
     </div>
     {% endif %}
